css/style.css
* {
    margin: 0;
}

*,
*:before,
*:after {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

html,
body {
    -ms-text-size-adjust: 100%;
    -moz-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
}

/*--------------------*/

body {
    font-family: 'Montserrat', sans-serif;
    background-color: #F5F7FA;
}

.main {
    background-color: #FFF;
    margin: 40px auto;
    width: 1200px;
    height: 1319px;
    display: flex;
    flex-direction: row;
    /* offset-x offset-y blur-radius spread-radius color */
    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
    font-size: 14px;
}

h1 {
    font-size: 45px;
    line-height: 55px;
    margin-bottom: 24px;

}

h3 {
    font-size: 22px;
    line-height: 27px;
    margin-bottom: 12px;
}

h4 {
    font-size: 16px;
    line-height: 20px;
    margin-bottom: 11px;
}

ul,
ol {
    padding-left: 22px;
    line-height: 24px;
    margin-bottom: 20px;
}

a {
    text-decoration: none;
    color: #595959;
}

/* LEFT BLOCK */

.left-block {
    width: 370px;
    height: 1319px;
    padding-top: 40px;
    background-color: #1E2939;
}

.photo {
    width: 370px;
}

.left-text-block {
    margin-top: 51px;
    margin-left: 40px;
    color: #FFF;
}

.left-text-block div {
    margin-bottom: 45px;
}

.left-text-block ul>li::marker {
    font-weight: bold;
    color: #FB6D3A;
}

.contacts p {
    display: inline;
    /* font-weight: bold; */
    line-height: 24px;
    margin-right: 20px;
}

.contacts a {
    color: lightgray;
}

/* RIGHT BLOCK  */

.right-block {
    padding-left: 88px;
    padding-top: 102px;
}

.right-block li {
    color: #595959;
}

.about {
    /* width: 400px; */
    /* Block width has been changed intentionally to accomodate the new name's length */
    margin-bottom: 40px;
}

.about p.black-bold {
    margin-bottom: 19px;
}


.description {
    line-height: 24px;
    width: 400px;
}

.projects {
    margin-bottom: 51px;
}

ol>li::marker {
    font-weight: bold;
}

.experience {
    margin-bottom: 43px;
    /* width: 525px; */
    width: 530px;
}

.duration {
    color: #A8A8A8;
    font-size: 12px;
    line-height: 15px;
    /* margin-top: 11px; */
    margin-bottom: 8px;
}

.education p.black-bold {
    margin-bottom: 12px;
}

/* OTHER */

.orange {
    color: #FB6D3A;
}

.black {
    color: #000;
}

.black-bold {
    color: #000;
    font-weight: bold;
}

p.black {
    color: #000;
}

